--- a/index_en.html
+++ b/index_en.html
@@ -286,6 +286,37 @@
   <br>
   <img src="http://dd.c3.bf.a1.top.mail.ru/counter?id=2047352;t=55" border="0" height="31" width="88" alt="Рейтинг@Mail.ru">
 
+
+  <!-- Yandex.Metrika counter -->
+  <script type="text/javascript" >
+      (function (d, w, c) {
+          (w[c] = w[c] || []).push(function() {
+              try {
+                  w.yaCounter48088352 = new Ya.Metrika({
+                      id:48088352,
+                      clickmap:true,
+                      trackLinks:true,
+                      accurateTrackBounce:true
+                  });
+              } catch(e) { }
+          });
+
+          var n = d.getElementsByTagName("script")[0],
+              s = d.createElement("script"),
+              f = function () { n.parentNode.insertBefore(s, n); };
+          s.type = "text/javascript";
+          s.async = true;
+          s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+          if (w.opera == "[object Opera]") {
+              d.addEventListener("DOMContentLoaded", f, false);
+          } else { f(); }
+      })(document, window, "yandex_metrika_callbacks");
+  </script>
+  <noscript><div><img src="https://mc.yandex.ru/watch/48088352" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+  <!-- /Yandex.Metrika counter -->
+
+
 <!-- <div style="width: 80px; height: 30px; position:relative; right: 5%;">
   <script style="width: 80px; height: 30px; position:relative; right: 5%;" src="//catcut.net/adv/16992"></script>
 </div> -->
