--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <meta name="keywords" content="eyesguard, как сохранить зрение, работая на компьютере, перерыв, напоминание, глаза, усталость, зрение">
   <link rel="shortcut icon" href="./img/eg_favicon.png" type="image/x-icon">
   <link href="./css/styles.css" rel="stylesheet">
+  <meta name ="viewport" contetnt="width=device-width, initial-scale=1">
 
-  <!-- <meta name ="viewport" contetnt="width=device-width, initial-scale=1"> -->
-  <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
+  
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 <script>
