--- a/index_en.html
+++ b/index_en.html
@@ -10,7 +10,7 @@
 
   <link rel="shortcut icon" href="./img/eg_favicon.png" type="image/x-icon">
   <link href="./css/styles.css" rel="stylesheet">
-  <meta name ="viewport" content="width=device-width, initial-scale=1">
+  <!-- <meta name ="viewport" content="width=device-width, initial-scale=1"> -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
