--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="eyesguard, как сохранить зрение, работая на компьютере, перерыв, напоминание, глаза, усталость, зрение">
   <link rel="shortcut icon" href="./img/eg_favicon.png" type="image/x-icon">
   <link href="./css/styles.css" rel="stylesheet">
-  <!-- <meta name ="viewport" content="width=device-width, initial-scale=1"> -->
+  <meta name ="viewport" content="width=device-width">
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
