--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ $(document).ready(function(){
 
         <p><br><br>
 
-          Назначение программы EyesGuard - напомнить Вам о необходимости сделать перерыв во время длительной работы на компьютере. При запуске программа сворачивается в трей и не мешает работе. Она позволяет задать время между перерывами, длительность перерывов и имеет несколько дополнительных функций: звуковое оповещение и выключение монитора на время перерыва для экономии электроэнергии.
+          Назначение программы EyesGuard - напомнить Вам о необходимости сделать перерыв во время длительной работы на компьютере. При запуске программа сворачивается в трей и не мешает работе. Она позволяет задать время между перерывами, длительность перерывов и имеет несколько дополнительных функций: звуковое оповещение и отслеживание активности пользователя, чтобы останавливать отсчет времени, если вы отошли от ПК.
 
     Попробуйте воспользоваться программой, и тогда Ваше зрение будет под надежной защитой EyesGuard, а Вы будете спокойны за свое здоровье.
         </p>
@@ -176,20 +176,20 @@ $(document).ready(function(){
 
         <div >
 
-          <a href="./img/screenshots/screenshot_3.png" target="_blank">
-            <img class="img-screenshot1" src="./img/screenshots/screenshot_3.png" alt="Screenshot3"></a>
+          <a href="./img/screenshots/ru/screenshot_3.png" target="_blank">
+            <img class="img-screenshot1" src="./img/screenshots/ru/screenshot_3.png" alt="Screenshot3"></a>
 
-          <a href="./img/screenshots/screenshot_1.png" target="_blank">
-            <img class="img-screenshot2" src="./img/screenshots/screenshot_1.png" alt="Screenshot1"></a>
+          <a href="./img/screenshots/ru/screenshot_1.png" target="_blank">
+            <img class="img-screenshot2" src="./img/screenshots/ru/screenshot_1.png" alt="Screenshot1"></a>
 
-          <a href="./img/screenshots/screenshot_2.png" target="_blank">
-            <img class="img-screenshot3" src="./img/screenshots/screenshot_2.png" alt="Screenshot2"></a>
+          <a href="./img/screenshots/ru/screenshot_2.png" target="_blank">
+            <img class="img-screenshot3" src="./img/screenshots/ru/screenshot_2.png" alt="Screenshot2"></a>
 
-          <a href="./img/screenshots/screenshot_4.png" target="_blank">
-            <img class="img-screenshot4" src="./img/screenshots/screenshot_4.png" alt="Screenshot4"></a>
+          <a href="./img/screenshots/ru/screenshot_4.png" target="_blank">
+            <img class="img-screenshot4" src="./img/screenshots/ru/screenshot_4.png" alt="Screenshot4"></a>
 
-          <a href="./img/screenshots/screenshot_5.png" target="_blank">
-            <img class="img-screenshot5" src="./img/screenshots/screenshot_5.png" alt="Screenshot5"></a>
+          <a href="./img/screenshots/ru/screenshot_5.png" target="_blank">
+            <img class="img-screenshot5" src="./img/screenshots/ru/screenshot_5.png" alt="Screenshot5"></a>
 
 
         </div>
@@ -201,7 +201,7 @@ $(document).ready(function(){
       <p>  Основное меню программы вызывается нажатием правой кнопки мыши на иконке EyesGuard в трее.
       Все установки производятся в окне "Настройки", которое можно вызвать либо выбором соотвествующего пункта меню, либо просто щелчком левой кнопки мыши на иконке в трее.
       </p>
-      <p>Время между перерывами должно быть в интервале от 5 до 120 минут, длительность перерыва - от 1 до 30 минут. Вы можете изменять настройки по своему усмотрению, но сначала следует осзнакомиться с рекомендациями окулиста. Все настройки программа хранит в файле set.dat в той же директории, где находится exe-файл. Если этого файла нет (такое может быть например при первом запуске программы), то программа установит настройки по умолчанию. При первом нажатии кнопки "Применить" этот файл будет создан. Также доступны дополнительные функции: выключение монитора на время перерыва для экономии электроэнергии и звуковое оповещение в течение 10 секунд до перерыва. В тех случаях, когда EyesGuard мешает, его можно выключить. Для этого выберите соответствующий пункт меню или через окно "Настройки".
+      <p>Время между перерывами должно быть в интервале от 5 до 120 минут, длительность перерыва - от 1 до 30 минут. Вы можете изменять настройки по своему усмотрению, но сначала следует осзнакомиться с рекомендациями окулиста. Все настройки программа хранит в файле set.dat в той же директории, где находится exe-файл. Если этого файла нет (такое может быть например при первом запуске программы), то программа установит настройки по умолчанию. При первом нажатии кнопки "Применить" этот файл будет создан. Также доступны дополнительные функции: отслеживание активности пользователя во время работы и звуковое оповещение за 10 секунд до перерыва, перед перерывом и после окончания перерыва. В тех случаях, когда EyesGuard мешает, его можно выключить. Для этого выберите соответствующий пункт меню или через окно "Настройки".
       <br><br>
       Системные требования: ОС Windows 98, Me, 2000, XP, Vista, 7 (также не должно быть проблем с Windows 8 и 10)
 <br><br>
