--- a/index_en.html
+++ b/index_en.html
@@ -92,7 +92,7 @@
         <div style="text-align: center"><img class="img-girl-and-pc" src="./img/girl_and_pc.jpg" alt="Tired girl in fron of PC">
         </div>
         <br> <br> <br>
-        <p>EyesGuard will remind you about necessity to have a break during a long work on computer. This program places an icon into the system tray and does not disturb your work. It allows to adjust the time between breaks (work time), breaks duration (break time) and has some more functions: sound effects, turning your monitor off during the break.Try to use this program and then EyesGuard will guard your vision!
+        <p>EyesGuard will remind you about necessity to have a break during a long work on computer. This program places an icon into the system tray and does not disturb your work. It allows to adjust the time between breaks (work time), breaks duration (break time) and has some more functions: sound effects and monitoring user activity for stopping time counting when you are out of PC.Try to use this program and then EyesGuard will guard your vision!
         </p>
      </td>
     </tr>
@@ -140,16 +140,16 @@
     <tr>
       <td  style="width: 30%;">
         <div style="width:50%">
-          <a href="./img/screenshots/screenshot_3.png" target="_blank">
-            <img class="img-screenshot1" src="./img/screenshots/screenshot_3.png" alt="Screenshot3"></a>
-          <a href="./img/screenshots/screenshot_1.png" target="_blank">
-            <img class="img-screenshot2" src="./img/screenshots/screenshot_1.png" alt="Screenshot1"></a>
-          <a href="./img/screenshots/screenshot_2.png" target="_blank">
-            <img class="img-screenshot3" src="./img/screenshots/screenshot_2.png" alt="Screenshot2"></a>
-          <a href="./img/screenshots/screenshot_4.png" target="_blank">
-            <img class="img-screenshot4" src="./img/screenshots/screenshot_4.png" alt="Screenshot4"></a>
-          <a href="./img/screenshots/screenshot_5.png" target="_blank">
-            <img class="img-screenshot5" src="./img/screenshots/screenshot_5.png" alt="Screenshot5"></a>
+          <a href="./img/screenshots/en/screenshot_3.png" target="_blank">
+            <img class="img-screenshot1" src="./img/screenshots/en/screenshot_3.png" alt="Screenshot3"></a>
+          <a href="./img/screenshots/en/screenshot_1.png" target="_blank">
+            <img class="img-screenshot2" src="./img/screenshots/en/screenshot_1.png" alt="Screenshot1"></a>
+          <a href="./img/screenshots/en/screenshot_2.png" target="_blank">
+            <img class="img-screenshot3" src="./img/screenshots/en/screenshot_2.png" alt="Screenshot2"></a>
+          <a href="./img/screenshots/en/screenshot_4.png" target="_blank">
+            <img class="img-screenshot4" src="./img/screenshots/en/screenshot_4.png" alt="Screenshot4"></a>
+          <a href="./img/screenshots/en/screenshot_5.png" target="_blank">
+            <img class="img-screenshot5" src="./img/screenshots/en/screenshot_5.png" alt="Screenshot5"></a>
         </div>
      </td>
      <td class="about-text" style="width: 60%;">
@@ -161,7 +161,7 @@
       <p>The duration between breaks should be from 5 to 120 min., the duration of breaks should be from 1 to 30 min. You can vary this settings as you want, but you should read recommendations of oculist at first!
       <br>
       All settings are stored in the file set.dat in the same folder with exe-file. If this file is not present, EyesGuard applies default settings. After click "Apply" button this file will be created.
-      There are some additionals features like turning your monitor off during the break and sound effects. If you don't want to make breaks at all you should shoose "Turn off" option.
+      There are some additionals features like sound effects and and monitoring user activity for stopping time counting when you are out of PC. If you don't want to make breaks at all you should choose "Turn off" option.
 
       <br><br>
       System requirements: OS Windows 98, Me, 2000, XP, Vista, 7 (I hope this program works on Windows 8 и 10 also)
