--- a/index_en.html
+++ b/index_en.html
@@ -92,7 +92,7 @@
         <div style="text-align: center"><img class="img-girl-and-pc" src="./img/girl_and_pc.jpg" alt="Tired girl in fron of PC">
         </div>
         <br> <br> <br>
-        <p>EyesGuard will remind you about necessity to have a break during a long work on computer. This program places an icon into the system tray and does not disturb your work. It allows to adjust the time between breaks (work time), breaks duration (break time) and has some more functions: sound effects and monitoring user activity for stopping time counting when you are out of PC.Try to use this program and then EyesGuard will guard your vision!
+        <p>EyesGuard will remind you about necessity to have a break during a long work on computer. This program places an icon into the system tray and does not disturb your work. It allows to adjust the duration of time between breaks, duration of breaks and has some more functions: sound effects and monitoring user activity for stopping time counting when you are out of PC. Try to use this program and then EyesGuard will guard your vision!
         </p>
      </td>
     </tr>
