--- a/index_en.html
+++ b/index_en.html
@@ -80,7 +80,7 @@
         <br>
 
         <section class="flat-button" style="text-align: center">
-        <button onclick="location.href='https://github.com/ExplorerOL/EyesGuard/releases/download/v1.20/EyesGuard.exe'">
+        <button onclick="location.href='https://github.com/ExplorerOL/EyesGuard/releases/download/v1.30_en/EyesGuard.exe'">
           Download EyesGuard >>
        </button>
         </section>
