--- a/index_en.html
+++ b/index_en.html
@@ -238,7 +238,7 @@
     <a style="color: #000000" href="http://www.gnu.org/licenses/gpl.html">http://www.gnu.org/licenses/gpl.html</a>
   </p>
   <p >Last version of EyesGuard you can download from
-    <a style="color: #000000" href="https://github.com/ExplorerOL/EyesGuard/releases/download/v1.20/EyesGuard.exe">here</a>. <br>
+    <a style="color: #000000" href="https://github.com/ExplorerOL/EyesGuard/releases/download/v1.30_en/EyesGuard.exe">here</a>. <br>
       Source code and previous versions are also <a style="color: #000000" href="https://github.com/ExplorerOL/EyesGuard/releases">available at GitHub</a>.
   </p>
 
