--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ $(document).ready(function(){
         <p>Если Вы много работаете на компьютере и хотите сохранить свое зрение, если Ваших детей не оторвать от монитора, но Вы не хотите, чтобы они надели очки, если Вы понимаете, что просиживать целый день за компьютером - плохо для здоровья, но сами сделать перерыв забываете или лень - эта программа поможет Вам!!! </p>
 
         <section class="flat-button" style="text-align: center">
-        <button onclick="location.href='https://github.com/ExplorerOL/EyesGuard/releases/download/v1.30/EyesGuard.exe'">
+        <button onclick="location.href='https://github.com/ExplorerOL/EyesGuard/releases/download/v1.30_ru/EyesGuard.exe'">
           Скачать EyesGuard >>
        </button>
         </section>
@@ -282,7 +282,7 @@ $(document).ready(function(){
     <a style="color: #000000" href="http://www.gnu.org/licenses/gpl.html">http://www.gnu.org/licenses/gpl.html</a>
   </p>
   <p >Последняя версия программы доступна
-    <a style="color: #000000" href="https://github.com/ExplorerOL/EyesGuard/releases/download/v1.30/EyesGuard.exe">здесь</a>. <br>
+    <a style="color: #000000" href="https://github.com/ExplorerOL/EyesGuard/releases/download/v1.30_ru/EyesGuard.exe">здесь</a>. <br>
       Исходный код и предыдущие версии также
       <a style="color: #000000" href="https://github.com/ExplorerOL/EyesGuard/releases">доступны на GitHub</a>.
   </p>
