Added metateg for Yandex webmaster

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="shortcut icon" href="./img/eg_favicon.png" type="image/x-icon">
   <link href="./css/styles.css" rel="stylesheet">
   <meta name ="viewport" content="width=1200">
+  
+  <meta name="yandex-verification" content="0278980ad597d779" />
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
