about sections updated

--- a/index_en.html
+++ b/index_en.html
@@ -158,18 +158,18 @@
       </p>
       <p>  Main menu of EyesGuard opens by clicking right button of mouse on the EG`s icon in system tray. All settings are made at the window "Settings", which can be opened this way: Main menu -> Settings or by clicking left button on the icon.
 
-      <p>The duration between breaks should be from 5 to 120 min., the duration of breaks should be from 1 to 30 min. You can vary this settings as you want, but you should read recommendations of oculist at first!
+      <p>The duration between breaks should be from 1 to 99 min., the duration of breaks should be from 1 to 99 min. You can vary this settings as you want, but you should read recommendations of oculist at first!
       <br>
       All settings are stored in the file set.dat in the same folder with exe-file. If this file is not present, EyesGuard applies default settings. After click "Apply" button this file will be created.
       There are some additionals features like sound effects and and monitoring user activity for stopping time counting when you are out of PC. If you don't want to make breaks at all you should choose "Turn off" option.
 
       <br><br>
-      System requirements: OS Windows 98, Me, 2000, XP, Vista, 7 (I hope this program works on Windows 8 и 10 also)
+      System requirements: OS Windows 10
       <br><br>
       EyesGuard does not demand an installation and does not insert any records into the register of your operational system.
-      For automatic start of the programm, you should add a link to exe-file to menu "Autostart" in Start menu of Windows. For exemple
+      For automatic start of the programm, you should add a link to exe-file to menu "Autostart" in Start menu of Windows. For example
       <br>
-      C:\Users\Administrator\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Startup - for Windows 7).
+      C:\Users\your_username\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Startup - for Windows 10
       <br><br>
       EyesGuard is distributed under GNU GPL license. A source code is available also.
       </p>
