--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="./img/eg_favicon.png" type="image/x-icon">
   <link href="./css/styles.css" rel="stylesheet">
   <meta name ="viewport" content="width=1200">
-  
+
   <meta name="yandex-verification" content="0278980ad597d779" />
 
 
@@ -200,20 +200,22 @@ $(document).ready(function(){
        <p>Данная программа поможет Вам правильно организовать свою работу на компьютере. Она напомнит о необходимости сделать перерыв и сообщит о начале и конце перерыва. <br><br>
     После запуска программа сворачивается в системный трей. При этом рядом с часами появится иконка в виде глаза. Если глаз голубого цвета, то программа работает, если глаз красный - программа не работает (и сущетвует опасность, что и Ваши глаза могут стать красными ;) ).
       </p>
-      <p>  Основное меню программы вызывается нажатием правой кнопки мыши на иконке EyesGuard в трее.
-      Все установки производятся в окне "Настройки", которое можно вызвать либо выбором соотвествующего пункта меню, либо просто щелчком левой кнопки мыши на иконке в трее.
+      <p>При наведении курсора мыши на иконке EyesGuard в трее будет отображена всплывающая подсказка с временм, оставшимся до перерыва.
       </p>
-      <p>Время между перерывами должно быть в интервале от 5 до 120 минут, длительность перерыва - от 1 до 30 минут. Вы можете изменять настройки по своему усмотрению, но сначала следует осзнакомиться с рекомендациями окулиста. Все настройки программа хранит в файле set.dat в той же директории, где находится exe-файл. Если этого файла нет (такое может быть например при первом запуске программы), то программа установит настройки по умолчанию. При первом нажатии кнопки "Применить" этот файл будет создан. Также доступны дополнительные функции: отслеживание активности пользователя во время работы и звуковое оповещение за 10 секунд до перерыва, перед перерывом и после окончания перерыва. В тех случаях, когда EyesGuard мешает, его можно выключить. Для этого выберите соответствующий пункт меню или через окно "Настройки".
+      <p>Окно текущего состояния можно вызвать нажатием левой кнопки мыщи на иконке в трее. В нем отображается время работы до перерыва, а также можно активировать
+        режим перерыва или приостановить защиту.
+      </p>
+      <p>Нажатие правой кнопки мыши на иконке в трее вызывает контекстное меню с пунктами "Exit", "Settings", "Status". Все пользовательские настройки производятся в окне "Settings".
+      </p>
+      <p>Время между перерывами должно быть в интервале от 1 до 99 минут, длительность перерыва - от 1 до 99 минут. Вы можете изменять настройки по своему усмотрению, но сначала следует ознакомиться с рекомендациями окулиста. Все настройки программа хранит в файле set.dat в той же директории, где находится exe-файл. Если этого файла нет (такое может быть например при первом запуске программы), то программа установит настройки по умолчанию. При первом нажатии кнопки "Применить" этот файл будет создан. Также доступны дополнительные функции: отслеживание активности пользователя во время работы и звуковое оповещение за 10 секунд до перерыва, перед перерывом и после окончания перерыва. В тех случаях, когда EyesGuard мешает, его можно выключить. Для этого выберите соответствующий пункт меню или через окно "Настройки".
       <br><br>
-      Системные требования: ОС Windows 98, Me, 2000, XP, Vista, 7 (также не должно быть проблем с Windows 8 и 10)
+      Системные требования: ОС Windows 10
 <br><br>
     EyesGuard не требует установки. Во время работы программа не вносит никаких записей в реестр операционной системы.
 
     Для того, чтобы программа автоматически запускалась при загрузке операционной системы, надо создать ярлык для файла EyesGuard.exe и поместить в директорию "Автозагрузка" главного меню:
     <br>
-    "C:\Documents and Settings\All Users\Главное меню\Программы\Автозагрузка" - для Windows XP
-    или <br>
-    C:\Users\Administrator\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Startup - для Windows 7).
+    C:\Users\your_username\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Startup - для Windows 10
 <br><br>
     Программа EyesGuard распространяется по лиценции GNU GPL. Поэтому также доступен ее исходный код.
       </p>
