text for Russian version was updated

--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@ $(document).ready(function(){
   <table  style="width: 86%; left: 7%; position: relative; top: 80px">
     <tr >
       <td  class="home-text" style="width: 50%;">
-        <p>Если Вы много работаете на компьютере и хотите сохранить свое зрение, если Ваших детей не оторвать от монитора, но Вы не хотите, чтобы они надели очки, если Вы понимаете, что просиживать целый день за компьютером - плохо для здоровья, но сами сделать перерыв забываете или лень - эта программа поможет Вам!!! </p>
+        <p>Если Вы много работаете на компьютере и хотите сохранить свое зрение, если Ваших детей не оторвать от монитора, но Вы не хотите, чтобы они надели очки, если Вы понимаете, что просиживать целый день за компьютером - плохо для здоровья, но сами сделать перерыв забываете или лень - эта программа поможет Вам! </p>
 
         <section class="flat-button" style="text-align: center">
-        <button onclick="location.href='https://github.com/ExplorerOL/EyesGuard/releases/download/v1.30_ru/EyesGuard.exe'">
+        <button onclick="location.href='https://github.com/ExplorerOL/EyesGuard_v2/releases/download/EyesGuard-v2.0.0/EyesGuard-v2.0.0-win64.zip'">
           Скачать EyesGuard >>
        </button>
         </section>
@@ -286,21 +286,18 @@ $(document).ready(function(){
     <a style="color: #000000" href="http://www.gnu.org/licenses/gpl.html">http://www.gnu.org/licenses/gpl.html</a>
   </p>
   <p >Последняя версия программы доступна
-    <a style="color: #000000" href="https://github.com/ExplorerOL/EyesGuard/releases/download/v1.30_ru/EyesGuard.exe">здесь</a>. <br>
+    <a style="color: #000000" href="https://github.com/ExplorerOL/EyesGuard_v2/releases/download/EyesGuard-v2.0.0/EyesGuard-v2.0.0-win64.zip">здесь</a>. <br>
       Исходный код и предыдущие версии также
-      <a style="color: #000000" href="https://github.com/ExplorerOL/EyesGuard/releases">доступны на GitHub</a>.
+      <a style="color: #000000" href="https://github.com/ExplorerOL/EyesGuard_v2/releases">доступны на GitHub</a>.
   </p>
 
-  <p>Программа EyesGuard написана в среде Borland C++ Builder6 с использованием VCL.
+  <p>Программа EyesGuard написана на языке Python (v 3.11) с использованием библиотеки <a style="color: #000000" href="https://customtkinter.tomschimansky.com">Customtkinter</a>. Исполняемый файл
+    создан с помощью пакета <a style="color: #000000" href="https://pypi.org/project/auto-py-to-exe">auto-py-to-exe</a>.
   </p>
 
-  <p>В программе были использованы пиктограммы, взятые для некоммерческого использованя с сайтов www.aha-soft.com и www.deleket.com. Спасибо их создателям!
+  <p>В программе были использованы иконки, взятые для некоммерческого использованя с сайтов <a style="color: #000000" href="https://www.softicons.com">SoftIcons</a> и <a style="color: #000000" href="https://icons8.ru/">icons8</a>. Спасибо их создателям!
   </p>
 
-  <p>Для пользователей операционной системы Linux: для запуска EyesGuard в Linux можно использовать программу <a style="color: #000000" href="http://winehq.org">WINE</a>. Для этого нужно установить WINE и выполнить команду:  <br>
-      $wine "[путь_к_программе]\EyesGuard.exe"
-
-  </p>
  </div>
 </div>
 
@@ -329,7 +326,7 @@ $(document).ready(function(){
   <br>
   <br>
 
-  © 2018 Dmitry Vorobjev
+  © 2024 Dmitry Vorobjev
 
   <br>
   <br>
