screenshots was updated

--- a/index.html
+++ b/index.html
@@ -179,19 +179,22 @@ $(document).ready(function(){
         <div >
 
           <a href="./img/screenshots/ru/screenshot_3.png" target="_blank">
-            <img class="img-screenshot1" src="./img/screenshots/ru/screenshot_3.png" alt="Screenshot3"></a>
+            <img class="img-screenshot3" src="./img/screenshots/ru/screenshot_3.png" alt="Screenshot3"></a>
 
           <a href="./img/screenshots/ru/screenshot_1.png" target="_blank">
-            <img class="img-screenshot2" src="./img/screenshots/ru/screenshot_1.png" alt="Screenshot1"></a>
+            <img class="img-screenshot1" src="./img/screenshots/ru/screenshot_1.png" alt="Screenshot1"></a>
 
           <a href="./img/screenshots/ru/screenshot_2.png" target="_blank">
-            <img class="img-screenshot3" src="./img/screenshots/ru/screenshot_2.png" alt="Screenshot2"></a>
+            <img class="img-screenshot2" src="./img/screenshots/ru/screenshot_2.png" alt="Screenshot2"></a>
 
           <a href="./img/screenshots/ru/screenshot_4.png" target="_blank">
             <img class="img-screenshot4" src="./img/screenshots/ru/screenshot_4.png" alt="Screenshot4"></a>
 
           <a href="./img/screenshots/ru/screenshot_5.png" target="_blank">
             <img class="img-screenshot5" src="./img/screenshots/ru/screenshot_5.png" alt="Screenshot5"></a>
+
+          <a href="./img/screenshots/ru/screenshot_6.jpg" target="_blank">
+          <img class="img-screenshot6" src="./img/screenshots/ru/screenshot_6.jpg" alt="Screenshot6"></a>
 
 
         </div>
