link was corrected

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ $(document).ready(function(){
     <a style="color: #000000" href="http://www.gnu.org/licenses/gpl.html">http://www.gnu.org/licenses/gpl.html</a>
   </p>
   <p >Последняя версия программы доступна
-    <a style="color: #000000" href="https://github.com/ExplorerOL/EyesGuard_v2/releases/download/EyesGuard-v2.0.0/EyesGuard-v2.0.0-win64.zip">здесь</a>. <br>
+    <a style="color: #000000" href="https://github.com/ExplorerOL/EyesGuard_v2/releases/latest">здесь</a>. <br>
       Исходный код и предыдущие версии также
       <a style="color: #000000" href="https://github.com/ExplorerOL/EyesGuard_v2/releases">доступны на GitHub</a>.
   </p>
