text for English version was corrected

--- a/index_en.html
+++ b/index_en.html
@@ -80,7 +80,7 @@
         <br>
 
         <section class="flat-button" style="text-align: center">
-        <button onclick="location.href='https://github.com/ExplorerOL/EyesGuard/releases/download/v1.30_en/EyesGuard.exe'">
+        <button onclick="location.href='https://github.com/ExplorerOL/EyesGuard_v2/releases/download/EyesGuard-v2.0.0/EyesGuard-v2.0.0-win64.zip'">
           Download EyesGuard >>
        </button>
         </section>
@@ -130,7 +130,7 @@
 <!-- Вторая страница О программе -------------------------------------------->
 <div id = "anchor-about-page"  style = "position: relative; top: 100px;">
 </div>
-<div  style="background: #41597D; position: relative; top: 180px; height: 1100px;" >
+<div  style="background: #41597D; position: relative; top: 180px; height: 1300px;" >
   <br>
   <p class="about-header1">About EyesGuard</p>
   <p class="about-header2">EyesGuard helps you to keep vision in order</p>
@@ -141,15 +141,17 @@
       <td  style="width: 30%;">
         <div style="width:50%">
           <a href="./img/screenshots/en/screenshot_3.png" target="_blank">
-            <img class="img-screenshot1" src="./img/screenshots/en/screenshot_3.png" alt="Screenshot3"></a>
+            <img class="img-screenshot3" src="./img/screenshots/en/screenshot_3.png" alt="Screenshot3"></a>
           <a href="./img/screenshots/en/screenshot_1.png" target="_blank">
-            <img class="img-screenshot2" src="./img/screenshots/en/screenshot_1.png" alt="Screenshot1"></a>
+            <img class="img-screenshot1" src="./img/screenshots/en/screenshot_1.png" alt="Screenshot1"></a>
           <a href="./img/screenshots/en/screenshot_2.png" target="_blank">
-            <img class="img-screenshot3" src="./img/screenshots/en/screenshot_2.png" alt="Screenshot2"></a>
+            <img class="img-screenshot2" src="./img/screenshots/en/screenshot_2.png" alt="Screenshot2"></a>
           <a href="./img/screenshots/en/screenshot_4.png" target="_blank">
             <img class="img-screenshot4" src="./img/screenshots/en/screenshot_4.png" alt="Screenshot4"></a>
           <a href="./img/screenshots/en/screenshot_5.png" target="_blank">
             <img class="img-screenshot5" src="./img/screenshots/en/screenshot_5.png" alt="Screenshot5"></a>
+          <a href="./img/screenshots/en/screenshot_6.jpg" target="_blank">
+          <img class="img-screenshot6" src="./img/screenshots/en/screenshot_6.jpg" alt="Screenshot6"></a>
         </div>
      </td>
      <td class="about-text" style="width: 60%;">
@@ -173,9 +175,6 @@
       <br><br>
       EyesGuard is distributed under GNU GPL license. A source code is available also.
       </p>
-      <p>
-      </p>
-
 
      </td>
     </tr>
@@ -238,21 +237,16 @@
     <a style="color: #000000" href="http://www.gnu.org/licenses/gpl.html">http://www.gnu.org/licenses/gpl.html</a>
   </p>
   <p >Last version of EyesGuard you can download from
-    <a style="color: #000000" href="https://github.com/ExplorerOL/EyesGuard/releases/download/v1.30_en/EyesGuard.exe">here</a>. <br>
-      Source code and previous versions are also <a style="color: #000000" href="https://github.com/ExplorerOL/EyesGuard/releases">available at GitHub</a>.
+    <a style="color: #000000" href="https://github.com/ExplorerOL/EyesGuard_v2/releases/latest">here</a>. <br>
+      Source code and previous versions are also <a style="color: #000000" href="https://github.com/ExplorerOL/EyesGuard_v2/releases">available at GitHub</a>.
   </p>
 
-  <p>EyesGuard was written using the IDE Borland C++ Builder 6.
+  <p>EyesGuard was written in Python (v3.11) using <a style="color: #000000" href="https://customtkinter.tomschimansky.com">Customtkinter</a> library. Executable file is created using <a style="color: #000000" href="https://pypi.org/project/auto-py-to-exe">auto-py-to-exe</a>.
   </p>
 
-  <p>There were used some icons for noncommercial usage from sites www.aha-soft.com and www.deleket.com. Thanks to their authors!
+  <p>There were used some icons for noncommercial usage from sites <a style="color: #000000" href="https://www.softicons.com">SoftIcons</a> and <a style="color: #000000" href="https://icons8.ru/">icons8</a>. Thanks to their authors!
   </p>
 
-  <p>For Linux users: if you want ro run EyesGuard under Linux you should use
-    <a style="color: #000000" href="http://winehq.org">WINE</a>.
-  After wine is installed run this command: <br>
-  $wine "[path_to_file]\EyesGuard.exe
-  </p>
  </div>
 </div>
 
@@ -281,7 +275,7 @@
   <br>
   <br>
   <br>
-  © 2018 Dmitry Vorobjev
+  © 2024 Dmitry Vorobjev
 
   <br>
   <br>
