Site for EyesGuard v2 (#1)
Site update for EyesGuard v2

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="./img/eg_favicon.png" type="image/x-icon">
   <link href="./css/styles.css" rel="stylesheet">
   <meta name ="viewport" content="width=1200">
-  
+
   <meta name="yandex-verification" content="0278980ad597d779" />
 
 
@@ -86,10 +86,10 @@ $(document).ready(function(){
   <table  style="width: 86%; left: 7%; position: relative; top: 80px">
     <tr >
       <td  class="home-text" style="width: 50%;">
-        <p>Если Вы много работаете на компьютере и хотите сохранить свое зрение, если Ваших детей не оторвать от монитора, но Вы не хотите, чтобы они надели очки, если Вы понимаете, что просиживать целый день за компьютером - плохо для здоровья, но сами сделать перерыв забываете или лень - эта программа поможет Вам!!! </p>
+        <p>Если Вы много работаете на компьютере и хотите сохранить свое зрение, если Ваших детей не оторвать от монитора, но Вы не хотите, чтобы они надели очки, если Вы понимаете, что просиживать целый день за компьютером - плохо для здоровья, но сами сделать перерыв забываете или лень - эта программа поможет Вам! </p>
 
         <section class="flat-button" style="text-align: center">
-        <button onclick="location.href='https://github.com/ExplorerOL/EyesGuard/releases/download/v1.30_ru/EyesGuard.exe'">
+        <button onclick="location.href='https://github.com/ExplorerOL/EyesGuard_v2/releases/download/EyesGuard-v2.0.0/EyesGuard-v2.0.0-win64.zip'">
           Скачать EyesGuard >>
        </button>
         </section>
@@ -179,19 +179,22 @@ $(document).ready(function(){
         <div >
 
           <a href="./img/screenshots/ru/screenshot_3.png" target="_blank">
-            <img class="img-screenshot1" src="./img/screenshots/ru/screenshot_3.png" alt="Screenshot3"></a>
+            <img class="img-screenshot3" src="./img/screenshots/ru/screenshot_3.png" alt="Screenshot3"></a>
 
           <a href="./img/screenshots/ru/screenshot_1.png" target="_blank">
-            <img class="img-screenshot2" src="./img/screenshots/ru/screenshot_1.png" alt="Screenshot1"></a>
+            <img class="img-screenshot1" src="./img/screenshots/ru/screenshot_1.png" alt="Screenshot1"></a>
 
           <a href="./img/screenshots/ru/screenshot_2.png" target="_blank">
-            <img class="img-screenshot3" src="./img/screenshots/ru/screenshot_2.png" alt="Screenshot2"></a>
+            <img class="img-screenshot2" src="./img/screenshots/ru/screenshot_2.png" alt="Screenshot2"></a>
 
           <a href="./img/screenshots/ru/screenshot_4.png" target="_blank">
             <img class="img-screenshot4" src="./img/screenshots/ru/screenshot_4.png" alt="Screenshot4"></a>
 
           <a href="./img/screenshots/ru/screenshot_5.png" target="_blank">
             <img class="img-screenshot5" src="./img/screenshots/ru/screenshot_5.png" alt="Screenshot5"></a>
+
+          <a href="./img/screenshots/ru/screenshot_6.jpg" target="_blank">
+          <img class="img-screenshot6" src="./img/screenshots/ru/screenshot_6.jpg" alt="Screenshot6"></a>
 
 
         </div>
@@ -200,20 +203,22 @@ $(document).ready(function(){
        <p>Данная программа поможет Вам правильно организовать свою работу на компьютере. Она напомнит о необходимости сделать перерыв и сообщит о начале и конце перерыва. <br><br>
     После запуска программа сворачивается в системный трей. При этом рядом с часами появится иконка в виде глаза. Если глаз голубого цвета, то программа работает, если глаз красный - программа не работает (и сущетвует опасность, что и Ваши глаза могут стать красными ;) ).
       </p>
-      <p>  Основное меню программы вызывается нажатием правой кнопки мыши на иконке EyesGuard в трее.
-      Все установки производятся в окне "Настройки", которое можно вызвать либо выбором соотвествующего пункта меню, либо просто щелчком левой кнопки мыши на иконке в трее.
+      <p>При наведении курсора мыши на иконке EyesGuard в трее будет отображена всплывающая подсказка с временм, оставшимся до перерыва.
       </p>
-      <p>Время между перерывами должно быть в интервале от 5 до 120 минут, длительность перерыва - от 1 до 30 минут. Вы можете изменять настройки по своему усмотрению, но сначала следует осзнакомиться с рекомендациями окулиста. Все настройки программа хранит в файле set.dat в той же директории, где находится exe-файл. Если этого файла нет (такое может быть например при первом запуске программы), то программа установит настройки по умолчанию. При первом нажатии кнопки "Применить" этот файл будет создан. Также доступны дополнительные функции: отслеживание активности пользователя во время работы и звуковое оповещение за 10 секунд до перерыва, перед перерывом и после окончания перерыва. В тех случаях, когда EyesGuard мешает, его можно выключить. Для этого выберите соответствующий пункт меню или через окно "Настройки".
+      <p>Окно текущего состояния можно вызвать нажатием левой кнопки мыщи на иконке в трее. В нем отображается время работы до перерыва, а также можно активировать
+        режим перерыва или приостановить защиту.
+      </p>
+      <p>Нажатие правой кнопки мыши на иконке в трее вызывает контекстное меню с пунктами "Exit", "Settings", "Status". Все пользовательские настройки производятся в окне "Settings".
+      </p>
+      <p>Время между перерывами должно быть в интервале от 1 до 99 минут, длительность перерыва - от 1 до 99 минут. Вы можете изменять настройки по своему усмотрению, но сначала следует ознакомиться с рекомендациями окулиста. Все настройки программа хранит в файле set.dat в той же директории, где находится exe-файл. Если этого файла нет (такое может быть например при первом запуске программы), то программа установит настройки по умолчанию. При первом нажатии кнопки "Применить" этот файл будет создан. Также доступны дополнительные функции: отслеживание активности пользователя во время работы и звуковое оповещение за 10 секунд до перерыва, перед перерывом и после окончания перерыва. В тех случаях, когда EyesGuard мешает, его можно выключить. Для этого выберите соответствующий пункт меню или через окно "Настройки".
       <br><br>
-      Системные требования: ОС Windows 98, Me, 2000, XP, Vista, 7 (также не должно быть проблем с Windows 8 и 10)
+      Системные требования: ОС Windows 10
 <br><br>
     EyesGuard не требует установки. Во время работы программа не вносит никаких записей в реестр операционной системы.
 
     Для того, чтобы программа автоматически запускалась при загрузке операционной системы, надо создать ярлык для файла EyesGuard.exe и поместить в директорию "Автозагрузка" главного меню:
     <br>
-    "C:\Documents and Settings\All Users\Главное меню\Программы\Автозагрузка" - для Windows XP
-    или <br>
-    C:\Users\Administrator\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Startup - для Windows 7).
+    C:\Users\your_username\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Startup - для Windows 10
 <br><br>
     Программа EyesGuard распространяется по лиценции GNU GPL. Поэтому также доступен ее исходный код.
       </p>
@@ -284,21 +289,18 @@ $(document).ready(function(){
     <a style="color: #000000" href="http://www.gnu.org/licenses/gpl.html">http://www.gnu.org/licenses/gpl.html</a>
   </p>
   <p >Последняя версия программы доступна
-    <a style="color: #000000" href="https://github.com/ExplorerOL/EyesGuard/releases/download/v1.30_ru/EyesGuard.exe">здесь</a>. <br>
+    <a style="color: #000000" href="https://github.com/ExplorerOL/EyesGuard_v2/releases/latest">здесь</a>. <br>
       Исходный код и предыдущие версии также
-      <a style="color: #000000" href="https://github.com/ExplorerOL/EyesGuard/releases">доступны на GitHub</a>.
+      <a style="color: #000000" href="https://github.com/ExplorerOL/EyesGuard_v2/releases">доступны на GitHub</a>.
   </p>
 
-  <p>Программа EyesGuard написана в среде Borland C++ Builder6 с использованием VCL.
+  <p>Программа EyesGuard написана на языке Python (v 3.11) с использованием библиотеки <a style="color: #000000" href="https://customtkinter.tomschimansky.com">Customtkinter</a>. Исполняемый файл
+    создан с помощью пакета <a style="color: #000000" href="https://pypi.org/project/auto-py-to-exe">auto-py-to-exe</a>.
   </p>
 
-  <p>В программе были использованы пиктограммы, взятые для некоммерческого использованя с сайтов www.aha-soft.com и www.deleket.com. Спасибо их создателям!
+  <p>В программе были использованы иконки, взятые для некоммерческого использованя с сайтов <a style="color: #000000" href="https://www.softicons.com">SoftIcons</a> и <a style="color: #000000" href="https://icons8.ru/">icons8</a>. Спасибо их создателям!
   </p>
 
-  <p>Для пользователей операционной системы Linux: для запуска EyesGuard в Linux можно использовать программу <a style="color: #000000" href="http://winehq.org">WINE</a>. Для этого нужно установить WINE и выполнить команду:  <br>
-      $wine "[путь_к_программе]\EyesGuard.exe"
-
-  </p>
  </div>
 </div>
 
@@ -327,7 +329,7 @@ $(document).ready(function(){
   <br>
   <br>
 
-  © 2018 Dmitry Vorobjev
+  © 2024 Dmitry Vorobjev
 
   <br>
   <br>
